Set up DI container and homebrew View Engine

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public public/index.php"
+    },
+    "autoload": {
+        "psr-4": {"ProductManager\\": "src/"}
     }
 }
