--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "license": "GPLV3+",
     "require": {
-        "slim/slim": "^3.11"
+        "slim/slim": "^3.11",
+        "mongodb/mongodb": "^1.4"
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public public/index.php"
